--- a/css/index.css
+++ b/css/index.css
@@ -136,3 +136,11 @@ html,
 body {
   font-family: 'Rubik', sans-serif;
 }
+header .chef {
+  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  background-attachment: fixed;
+}
