--- a/less/index.less
+++ b/less/index.less
@@ -2,10 +2,9 @@
 @import "global.less";
 @import "variables.less";
 @import "mixins.less";
-@import "home-page.less";
-@import "navigation.less";
-@import "footer.less";
+@import "header.less";
 @import "about.less";
+@import "footer.less";
 @import "contact.less";
 
 
