--- a/less/global.less
+++ b/less/global.less
@@ -13,3 +13,27 @@ html, body {
 }
 
 
+h1, h2, h3, h4, h5, h6 {
+ 
+	font-family: 'Rubik', sans-serif;
+}
+
+h2 {
+	font-size: 3.2rem;
+  }
+  
+  h3 {
+	font-size: 2.8rem;
+  }
+  
+  p {
+	font-size: 1.6rem;
+	line-height: 1.4;
+  }
+
+  .wrapper {
+	max-width: 800px;
+	width: 100%;
+	margin: 0 auto;  
+  }
+  
