some code formating

--- a/less/global.less
+++ b/less/global.less
@@ -8,32 +8,37 @@ html {
 }
 
 
-html, body {
+html,
+body {
 	font-family: 'Rubik', sans-serif;
 }
 
 
-h1, h2, h3, h4, h5, h6 {
- 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+
 	font-family: 'Rubik', sans-serif;
 }
 
 h2 {
 	font-size: 3.2rem;
-  }
-  
-  h3 {
+}
+
+h3 {
 	font-size: 2.8rem;
-  }
-  
-  p {
+}
+
+p {
 	font-size: 1.6rem;
 	line-height: 1.4;
-  }
+}
 
-  .wrapper {
+.wrapper {
 	max-width: 800px;
 	width: 100%;
-	margin: 0 auto;  
-  }
-  
+	margin: 0 auto;
+}
