--- a/less/variables.less
+++ b/less/variables.less
@@ -1,17 +1,21 @@
+// Color assignments to be added
+
+
+
 // Color vars
-@deep-gray:#434343;
-@dark-sky:#283E51;
-@deep-blue:#2a5298;
-@clear-sky:#005C97;
-@turquoise:#136a8a;
-@purple:#6441A5;
-@pastel-orange:#ffb347;
-@grayish:#34495e;
-@amber:#34495e;
-@light-blue:#2196F3;
-@indigo:#3F51B5;
-@black:#000000;
-@lighter-black:#171A1B;
+@deep-gray: #434343;
+@dark-sky: #283E51;
+@deep-blue: #2a5298;
+@clear-sky: #005C97;
+@turquoise: #136a8a;
+@purple: #6441A5;
+@pastel-orange: #ffb347;
+@grayish: #34495e;
+@amber: #34495e;
+@light-blue: #2196F3;
+@indigo: #3F51B5;
+@black: #000000;
+@lighter-black: #171A1B;
 
 
 // max width for website
