started styling navigation in header.less

--- a/less/variables.less
+++ b/less/variables.less
@@ -22,12 +22,13 @@
 @maxWidthWebsite: 800px;
 
 // base font sizes
-@defaultFontSize: 75%;
-@mobileFontSize: 150%;
+@defaultFontSize: 100%;
+@mobileFontSize: 130%;
 
 // font sizes
-@xLargeFontSize: 3rem;
-@largeFontSize: 1.5rem;
+@xLargeFontSize: 3.5rem;
+@largeFontSize: 2.0rem;
+@mediumFontSize: 1.2rem;
 @smallFontSize: 0.6rem;
 
 // paddings
