--- a/css/index.css
+++ b/css/index.css
@@ -155,9 +155,25 @@ p {
   line-height: 1.4;
 }
 .wrapper {
-  max-width: 800px;
+  max-width: 900px;
   width: 100%;
   margin: 0 auto;
+}
+header nav {
+  display: flex;
+  justify-content: space-around;
+}
+header nav ul {
+  display: flex;
+  justify-content: space-between;
+  padding: 1.2rem;
+  font-size: 2rem;
+}
+header nav ul a {
+  padding: 2.1rem;
+}
+header nav .logo img {
+  border-radius: 30%;
 }
 header .chef {
   background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
