--- a/less/header.less
+++ b/less/header.less
@@ -1,7 +1,25 @@
 header {
 
 
+    nav {
+        display: flex;
+        justify-content: space-around;
 
+        ul {
+            display: flex;
+            justify-content: space-between;
+            padding: @mediumPadding;
+            font-size: @largeFontSize;
+            a {
+                padding: @bigPadding;
+            }
+        }
+
+        .logo img{
+            border-radius:30%;
+        }
+
+    }
 
 
 
