--- a/less/header.less
+++ b/less/header.less
@@ -4,6 +4,8 @@ header {
     nav {
         display: flex;
         justify-content: space-around;
+        padding: @smallPadding;
+        border: @myBorder;
 
         ul {
             display: flex;
@@ -11,7 +13,8 @@ header {
             padding: @mediumPadding;
             font-size: @largeFontSize;
             a {
-                padding: @bigPadding;
+                padding: @mediumPadding;
+                text-decoration: none;
             }
         }
 
@@ -29,7 +32,7 @@ header {
         background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
         background-size: cover;
         background-position: center;
-        height: 80vh;
+        width:100%;
         background-attachment: fixed;
 
     }
