trying to add linear gradient to main-banner image but it doesnt working

--- a/css/index.css
+++ b/css/index.css
@@ -178,11 +178,7 @@ header nav ul a {
 header nav .logo img {
   border-radius: 30%;
 }
-header .chef {
-  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  background-attachment: fixed;
+header .main-banner {
+  background: -webkit-linear-gradient(top, #2196F3, #2a5298);
+  background: -moz-linear-gradien(top, #2196F3, #2a5298);
 }
