--- a/less/header.less
+++ b/less/header.less
@@ -27,13 +27,13 @@ header {
 
 
 
-    .chef {
-        background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
-        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
-        background-size: cover;
-        background-position: center;
-        width:100%;
-        background-attachment: fixed;
+    .main-banner {
+        background: -webkit-linear-gradient(top, @light-blue, @deep-blue);
+        background: -moz-linear-gradien(top, @light-blue, @deep-blue);
+
+        // background-size: cover;
+        // background-position: center;
+        // background-attachment: fixed;
 
     }
 
