--- a/less/header.less
+++ b/less/header.less
@@ -12,9 +12,17 @@ header {
             justify-content: space-between;
             padding: @mediumPadding;
             font-size: @largeFontSize;
+            transition: transform 1s ease-in-out 0.5s;
+            &:hover{
+                transform: perspective(100px) rotate3d(0, 1, 0, 360deg);
+            }
+
             a {
                 padding: @mediumPadding;
                 text-decoration: none;
+                text-transform: uppercase;
+                font-size: @largeFontSize;
+                
             }
         }
 
