--- a/less/header.less
+++ b/less/header.less
@@ -13,7 +13,8 @@ header {
             padding: @mediumPadding;
             font-size: @largeFontSize;
             transition: transform 1s ease-in-out 0.5s;
-            &:hover{
+
+            &:hover {
                 transform: perspective(100px) rotate3d(0, 1, 0, 360deg);
             }
 
@@ -22,12 +23,17 @@ header {
                 text-decoration: none;
                 text-transform: uppercase;
                 font-size: @largeFontSize;
-                
             }
         }
 
-        .logo img{
-            border-radius:30%;
+        .logo img {
+            border-radius: 30%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 60px;
+            height: 60px;
+        
         }
 
     }
