changed some values in global.less, trying to find measures concerning font sizes

--- a/less/header.less
+++ b/less/header.less
@@ -33,17 +33,15 @@ header {
             align-items: center;
             width: 60px;
             height: 60px;
-        
         }
-
     }
 
 
 
 
     .main-banner {
-        background: -webkit-linear-gradient(top, @light-blue, @deep-blue);
-        background: -moz-linear-gradien(top, @light-blue, @deep-blue);
+        // background: linear-gradient(top, @light-blue, @deep-blue);
+      opacity: 0.8;
 
         // background-size: cover;
         // background-position: center;
