--- a/css/index.css
+++ b/css/index.css
@@ -144,14 +144,24 @@ h5,
 h6 {
   font-family: 'Rubik', sans-serif;
 }
+h1 {
+  font-size: 2.9rem;
+}
 h2 {
-  font-size: 3.2rem;
+  font-size: 2.5rem;
 }
 h3 {
-  font-size: 2.8rem;
+  font-size: 2.1rem;
+}
+h4 {
+  font-size: 1.5rem;
 }
 p {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
+  line-height: 1.4;
+}
+blockquote {
+  font-size: 1.7rem;
   line-height: 1.4;
 }
 .wrapper {
@@ -190,6 +200,5 @@ header nav .logo img {
   height: 60px;
 }
 header .main-banner {
-  background: -webkit-linear-gradient(top, #2196F3, #2a5298);
-  background: -moz-linear-gradien(top, #2196F3, #2a5298);
+  opacity: 0.8;
 }
