--- a/less/global.less
+++ b/less/global.less
@@ -24,18 +24,37 @@ h6 {
 	font-family: 'Rubik', sans-serif;
 }
 
+
+h1 {
+	font-size: 2.9rem;
+}
+
+
 h2 {
-	font-size: 3.2rem;
+	font-size: 2.5rem;
 }
 
 h3 {
-	font-size: 2.8rem;
+	font-size: 2.1rem;
 }
 
+h4{
+	font-size: 1.5rem;
+}
+
+
 p {
-	font-size: 1.6rem;
+	font-size: 1.8rem;
 	line-height: 1.4;
 }
+
+
+blockquote{
+	font-size: 1.7rem;
+	line-height: 1.4;
+}
+
+
 
 .wrapper {
 	max-width: 900px;
