--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,9 +5,8 @@
     border-radius: @mediumPadding;
     font-size: @largeFontSize;
     padding: @smallPadding;
-    width: 90%;
-    background-color: @light-blue;
-    color: @black;
+    background-color: @deep-blue;
+    color: @pastel-orange;
     cursor: pointer;
       
 }
