started styling home section in home.less

--- a/less/index.less
+++ b/less/index.less
@@ -3,6 +3,7 @@
 @import "variables.less";
 @import "mixins.less";
 @import "header.less";
+@import "home.less";
 @import "about.less";
 @import "footer.less";
 @import "contact.less";
