--- a/css/index.css
+++ b/css/index.css
@@ -220,3 +220,15 @@ header .main-image .buttons button {
   cursor: pointer;
   margin: 0.5em;
 }
+.home {
+  display: flex;
+  flex-direction: column;
+}
+.home .intro-to-features {
+  display: flex;
+  flex-direction: column;
+}
+.home .features {
+  display: flex;
+  justify-content: space-evenly;
+}
