--- a/less/home.less
+++ b/less/home.less
@@ -1,11 +1,13 @@
 .home {
     display: flex;
     flex-direction: column;
+    padding: @mediumPadding;
 
   
     .intro-to-features{
        display: flex;
        flex-direction: column;
+       padding: @mediumPadding;
 
     }
 
@@ -13,8 +15,19 @@
     .features{
         display: flex;
         justify-content: space-evenly;
+        padding: @smallPadding;
 
+        .inside-of-features{
+            padding: @smallPadding;
+
+           p {
+               padding-top: @mediumPadding;
+           }
+            
+        }
     }
+
+
 
 
 
