still trying to sort out testimonials but I am stuck now, cant change them to go direction row

--- a/less/testimonials.less
+++ b/less/testimonials.less
@@ -1,17 +1,14 @@
 .testimonials  {
 display: flex;
-justify-content: space-evenly;
-padding: @mediumPadding;
+justify-content: space-around;
+flex-wrap: wrap;
 
 
 .inside-of-testimonials{
     display: flex;
     flex-direction: column;
-  
-    p{
-        padding: @smallPadding;
- 
-    }
+    padding: @smallPadding;
+
 }
  
 
