--- a/less/home.less
+++ b/less/home.less
@@ -19,6 +19,7 @@
 
         .inside-of-features{
             padding: @smallPadding;
+            width: 50%;
 
            p {
                padding-top: @mediumPadding;
