--- a/less/index.less
+++ b/less/index.less
@@ -4,6 +4,7 @@
 @import "mixins.less";
 @import "header.less";
 @import "home.less";
+@import "testimonials.less";
 @import "about.less";
 @import "footer.less";
 @import "contact.less";
