--- a/css/index.css
+++ b/css/index.css
@@ -158,11 +158,14 @@ h4 {
 }
 p {
   font-size: 1.8rem;
-  line-height: 1.3;
+  line-height: 1.4;
 }
 blockquote {
   font-size: 1.6rem;
   line-height: 1.4;
+}
+cite {
+  font-size: 1.1rem;
 }
 .wrapper {
   max-width: 900px;
@@ -246,10 +249,14 @@ header .main-image .buttons button {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  padding: 1.2rem;
 }
 .testimonials .inside-of-testimonials {
   display: flex;
   flex-direction: column;
-  padding: 0.5rem;
   width: 35%;
+  padding: 0.5rem;
+}
+.testimonials .inside-of-testimonials .customers-photos {
+  border-radius: 20%;
 }
