--- a/less/global.less
+++ b/less/global.less
@@ -46,7 +46,7 @@ h4{
 
 p {
 	font-size: 1.8rem;
-	line-height: 1.3;
+	line-height: 1.4;
 	
 }
 
@@ -56,6 +56,10 @@ blockquote{
 	line-height: 1.4;
 }
 
+
+cite {
+	font-size: 1.1rem;
+}
 
 
 .wrapper {
