--- a/less/testimonials.less
+++ b/less/testimonials.less
@@ -2,6 +2,7 @@
 display: flex;
 justify-content: space-around;
 flex-wrap: wrap;
+padding: @mediumPadding;
 
 
 .inside-of-testimonials{
@@ -9,6 +10,11 @@ flex-wrap: wrap;
     flex-direction: column;
     padding: @smallPadding;
     width: 35%;
+    padding: @smallPadding;
+
+    .customers-photos{
+        border-radius: 20%;
+    }
 
 }
  
