--- a/less/contact.less
+++ b/less/contact.less
@@ -36,3 +36,67 @@
     }
 
 }
+
+
+.contact-section{
+    background-image: url();
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; 
+
+    span{
+      background-color:@color-for-contact-form;
+      color: #ddd;
+    }
+    
+}
+
+
+  .border{
+    width: 10%;
+    height: 10px;
+    background:@dark-sky;
+    margin: 2.5% auto;
+  }
+  
+  .contact-form{
+    max-width: 600px;
+    margin: auto;
+    padding: 0 @smallPadding;
+    overflow: hidden;
+  }
+  
+  .contact-form-text{
+    display: flex;
+    width: 100%;
+    margin: 2.5% 0;
+    border: 0;
+    background: @color-for-contact-form;
+    padding: @bigPadding;
+    outline: none;
+    transition: 0.5s;
+  }
+  .contact-form-text:focus{
+    box-shadow: 0 0 10px 4px @dark-sky;
+  }
+  
+  .contact-form-btn{
+    float: right;
+    border: 0;
+    background: #34495e;
+    color: #fff;
+    padding: @smallPadding @bigPadding;
+    border-radius: 5%;
+    cursor: pointer;
+    transition: 0.5s;
+
+   &:hover{
+    background: #2980b9;
+   }
+
+  }
+
+  
+
+
