--- a/less/header.less
+++ b/less/header.less
@@ -22,6 +22,8 @@ header {
                 text-decoration: none;
                 text-transform: uppercase;
                 font-size: @largeFontSize;
+                font-weight: 500;
+                
             }
         }
 
