--- a/css/index.css
+++ b/css/index.css
@@ -134,7 +134,8 @@ html {
 }
 html,
 body {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Rubik', 'Arial', sans-serif;
+  font-weight: 300;
 }
 h1,
 h2,
@@ -175,6 +176,18 @@ small {
   width: 100%;
   margin: 0 auto;
 }
+/* ----- LINKS ----- */
+a:link,
+a:visited {
+  color: #136a8a;
+  border-bottom: 0.2rem solid #34495e solid #ffb347;
+  transition: border-bottom 0.2s, color 0.2s;
+}
+a:hover,
+a:active {
+  color: 0.2rem solid #34495e;
+  border-bottom: 0.2rem solid #34495e solid;
+}
 header nav {
   display: flex;
   justify-content: space-around;
@@ -196,6 +209,7 @@ header nav ul a {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 1.7rem;
+  font-weight: 500;
 }
 header nav .logo img {
   border-radius: 30%;
