--- a/less/about.less
+++ b/less/about.less
@@ -33,6 +33,55 @@
             width: 60px;
             height: 60px;
         }
-    }   
+    }
+
+}
+
+
+.section-meals {
+
+
+    .meals-showcase1 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+
+
+
+    .meals-showcase2 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+
+
+    .meal-photo {
+        overflow: hidden;
+        background-color: #000;
+    }
+    
+    .meal-photo img {
+        opacity: 0.7;
+        height: auto;
+        -webkit-transform: scale(1.15);
+        -ms-transform: scale(1.15);
+        transform: scale(1.15);
+        -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
+        transition: transform 0.5s, opacity 0.5s;
+    }
+    
+    .meal-photo img:hover {
+        opacity: 1;
+        -webkit-transform: scale(1.03);
+        -ms-transform: scale(1.03);
+        transform: scale(1.03);
+    }
+    
+
+
+
+
+
 
 }
