--- a/less/testimonials.less
+++ b/less/testimonials.less
@@ -11,6 +11,7 @@ padding: @mediumPadding;
     padding: @smallPadding;
     width: 35%;
     padding: @smallPadding;
+    font-style: italic;
 
     .customers-photos{
         border-radius: 20%;
