created scripts.js, wrote the code for sticky nav, i will add styles and effects later

--- a/less/about.less
+++ b/less/about.less
@@ -35,11 +35,13 @@
         }
     }
 
+  
+
 }
 
 
 .section-meals {
-
+padding: @mediumPadding;
 
     .meals-showcase1 {
         display: flex;
@@ -47,13 +49,10 @@
     }
 
 
-
-
     .meals-showcase2 {
         display: flex;
         flex-wrap: wrap;
     }
-
 
 
     .meal-photo {
