--- a/css/index.css
+++ b/css/index.css
@@ -188,30 +188,30 @@ a:active {
   color: 0.2rem solid #34495e;
   border-bottom: 0.2rem solid #34495e solid;
 }
-header nav {
+header .primary-nav {
   display: flex;
   justify-content: space-around;
   padding: 0.5rem;
   border: 0.2rem solid #34495e;
 }
-header nav ul {
+header .primary-nav ul {
   display: flex;
   justify-content: space-between;
   padding: 1.2rem;
   font-size: 1.7rem;
   transition: transform 1s ease-in-out 0.5s;
 }
-header nav ul:hover {
+header .primary-nav ul:hover {
   transform: perspective(100px) rotate3d(0, 1, 0, 360deg);
 }
-header nav ul a {
+header .primary-nav ul a {
   padding: 1.2rem;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 1.7rem;
   font-weight: 500;
 }
-header nav .logo img {
+header .primary-nav .logo img {
   border-radius: 30%;
   display: flex;
   justify-content: center;
@@ -219,17 +219,17 @@ header nav .logo img {
   width: 60px;
   height: 60px;
 }
-.main-image {
+header .main-image {
   position: relative;
 }
-.main-image .buttons {
+header .main-image .buttons {
   display: inline-flex;
   justify-content: space-between;
   position: absolute;
   bottom: 30%;
   left: 15%;
 }
-.main-image .buttons button {
+header .main-image .buttons button {
   float: right;
   border: 0;
   background: #34495e;
@@ -241,8 +241,19 @@ header nav .logo img {
   width: 50%;
   margin: 0.5em;
 }
-.main-image .buttons button:hover {
+header .main-image .buttons button:hover {
   background: #2980b9;
+}
+.call-me {
+  right: 20px;
+  display: none;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
 }
 .home {
   display: flex;
@@ -311,6 +322,9 @@ header nav .logo img {
   align-items: center;
   width: 60px;
   height: 60px;
+}
+.section-meals {
+  padding: 1.2rem;
 }
 .section-meals .meals-showcase1 {
   display: flex;
