--- a/less/header.less
+++ b/less/header.less
@@ -1,6 +1,6 @@
 header {
 
-    nav {
+    .primary-nav {
         display: flex;
         justify-content: space-around;
         padding: @smallPadding;
@@ -23,7 +23,6 @@ header {
                 text-transform: uppercase;
                 font-size: @largeFontSize;
                 font-weight: 500;
-                
             }
         }
 
@@ -35,27 +34,60 @@ header {
             width: 60px;
             height: 60px;
         }
+
     }
 
-}
+
+    .main-image {
+        position: relative;
+
+        .buttons {
+            display: inline-flex;
+            justify-content: space-between;
+            position: absolute;
+            bottom: 30%;
+            left: 15%;
+
+            button {
+                .buttonParametric();
+                margin: 0.5em;
 
 
-
-.main-image {
-    position: relative;
-
-    .buttons {
-        display: inline-flex;
-        justify-content: space-between;
-        position: absolute;
-        bottom: 30%;
-        left: 15%;
-
-        button {
-            .buttonParametric();
-            margin: 0.5em;
-
-
+            }
         }
     }
+
 }
+
+
+.call-me { 
+    right: 20px;
+    display: none;
+    
+        
+}
+
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+   
+  }
+  
+
+
+
+
+// @-moz-keyframes fadein {
+//     from { opacity: 0; }
+//     to   { opacity: 1; }
+// }
+
+// /* Safari, Chrome and Opera > 12.1 */
+// @-webkit-keyframes fadein {
+//     from { opacity: 0; }
+//     to   { opacity: 1; }
+// }
