--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,7 +3,7 @@
     
         float: right;
         border: 0;
-        background: #34495e;
+        background:@turquoise;
         color: #fff;
         padding: @smallPadding @bigPadding;
         border-radius: 5%;
@@ -12,7 +12,7 @@
         width: 50%;
     
        &:hover{
-        background: #2980b9;
+        background-color:#15cda8;
        }    
  
 }
