added some mixins in mixins.less

--- a/css/index.css
+++ b/css/index.css
@@ -359,7 +359,7 @@ footer .row-footer {
   padding: 1.2rem;
 }
 footer .row-footer .row-inside-of-footer {
-  display: row;
+  display: flex;
   justify-content: space-between;
   padding: 1.2rem;
 }
