--- a/less/header.less
+++ b/less/header.less
@@ -1,8 +1,7 @@
 header {
 
     .primary-nav {
-        display: flex;
-        justify-content: space-around;
+        .flex-justify-content-spaceAround();
         padding: @smallPadding;
         border: @myBorder;
 
@@ -51,7 +50,7 @@ header {
             button {
                 .buttonParametric();
                 margin: 0.5em;
-               
+
 
 
             }
@@ -73,10 +72,5 @@ header {
     left: 0;
     width: 100%;
     z-index: 9999;
-   
+
 }
-
-
-
-
-
