--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,21 +1,28 @@
-
 .buttonParametric() {
-    
+
         float: right;
         border: 0;
-        background:@turquoise;
+        background: @turquoise;
         color: #fff;
         padding: @smallPadding @bigPadding;
         border-radius: 5%;
         cursor: pointer;
         transition: 0.5s;
         width: 50%;
-    
-       &:hover{
-        background-color:#15cda8;
-       }    
- 
+
+        &:hover {
+                background-color: #15cda8;
+        }
+
 }
 
 
+.flex-justify-content-spaceAround() {
+        display: flex;
+        justify-content: space-around;
+}
 
+.flex-justify-content-spaceBetween() {
+        display: flex;
+        justify-content: space-between;
+}
