--- a/less/testimonials.less
+++ b/less/testimonials.less
@@ -1,26 +1,22 @@
-.testimonials  {
-display: flex;
-justify-content: space-around;
-flex-wrap: wrap;
-padding: @mediumPadding;
+.testimonials {
+    .flex-justify-content-spaceAround();
+    flex-wrap: wrap;
+    padding: @mediumPadding;
 
 
-.inside-of-testimonials{
-    display: flex;
-    flex-direction: column;
-    padding: @smallPadding;
-    width: 35%;
-    padding: @smallPadding;
-    font-style: italic;
+    .inside-of-testimonials {
+        display: flex;
+        flex-direction: column;
+        padding: @smallPadding;
+        width: 35%;
+        padding: @smallPadding;
+        font-style: italic;
 
-    .customers-photos{
-        border-radius: 20%;
+        .customers-photos {
+            border-radius: 20%;
+        }
+
     }
-
-}
- 
-
-
 
 
 }
