--- a/less/footer.less
+++ b/less/footer.less
@@ -1,41 +1,39 @@
 footer {
 
-.row-footer{
-  display: flex;
-  justify-content: space-between;
-  padding: @mediumPadding;
+  .row-footer {
+    .flex-justify-content-spaceBetween();
+    padding: @mediumPadding;
 
     .row-inside-of-footer {
-      display: row;
-      justify-content: space-between;
+      .flex-justify-content-spaceBetween();
       padding: @mediumPadding;
 
-      .footer-nav{
-          display: inline-flex;
+      .footer-nav {
+        display: inline-flex;
+        padding: @mediumPadding;
+
+        & li a {
           padding: @mediumPadding;
-         & li a{
-              padding: @mediumPadding;
-          }
+        }
       }
 
-      .social-links{
-          display: inline-flex;
+      .social-links {
+        display: inline-flex;
+        padding: @mediumPadding;
+
+        & li a {
           padding: @mediumPadding;
-          & li a{
-            padding: @mediumPadding;
         }
       }
     }
 
-}
+  }
 
 
 }
 
 
 .copyright {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
-
-
