--- a/less/header.less
+++ b/less/header.less
@@ -1,5 +1,4 @@
 header {
-
     .primary-nav {
         .flex-justify-content-spaceAround();
         padding: @smallPadding;
@@ -36,7 +35,6 @@ header {
 
     }
 
-
     .main-image {
         position: relative;
 
@@ -50,9 +48,6 @@ header {
             button {
                 .buttonParametric();
                 margin: 0.5em;
-
-
-
             }
         }
     }
@@ -60,8 +55,20 @@ header {
 }
 
 
+
+.header-content  {
+ h1:first-line{
+    letter-spacing: 2px;
+    font-size: 1.3em;  
+ }
+
+}
+
+
+
 .call-me {
-    right: 20px;
+    right: 1%;
+    font-weight: 400;
     display: none;
 }
 
@@ -72,5 +79,4 @@ header {
     left: 0;
     width: 100%;
     z-index: 9999;
-
 }
