--- a/less/header.less
+++ b/less/header.less
@@ -63,8 +63,8 @@ header {
  }
  h1 {
     -webkit-animation: pulsate 3s ease-in-out;
-	-webkit-animation-iteration-count: infinite;
-    opacity: .3;
+	-webkit-animation-iteration-count: 5;
+    // opacity: .3;
     
     @-webkit-keyframes pulsate {
         0% {
