--- a/css/index.css
+++ b/css/index.css
@@ -250,8 +250,7 @@ header .main-image .buttons button:hover {
 }
 .header-content h1 {
   -webkit-animation: pulsate 3s ease-in-out;
-  -webkit-animation-iteration-count: infinite;
-  opacity: 0.3;
+  -webkit-animation-iteration-count: 5;
 }
 @-webkit-keyframes pulsate {
   0% {
