--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,6 +9,7 @@
         cursor: pointer;
         transition: 0.5s;
         width: 50%;
+        border-radius: 10%;
 
         &:hover {
                 background-color: #15cda8;
