--- a/less/home.less
+++ b/less/home.less
@@ -3,7 +3,6 @@
     flex-direction: column;
     padding: @mediumPadding;
 
-
     .intro-to-features {
         display: flex;
         flex-direction: column;
@@ -11,10 +10,10 @@
 
     }
 
-
     .features {
         display: flex;
         justify-content: space-evenly;
+        flex-wrap: wrap;
         padding: @smallPadding;
 
         .inside-of-features {
@@ -27,7 +26,6 @@
 
         }
     }
-
 
 
 }
