--- a/less/variables.less
+++ b/less/variables.less
@@ -17,6 +17,8 @@
 @black: #000000;
 @lighter-black: #171A1B;
 @color-for-contact-form:#dfe6e9;
+@radial-color1:#A5CC82;
+@radial-color2:#00467F;
 
 
 // max width for website
