--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,7 +2,7 @@
 
         float: right;
         border: 0;
-        background: @turquoise;
+        background: @clear-sky;
         color: #fff;
         padding: @smallPadding @bigPadding;
         border-radius: 5%;
