--- a/less/header.less
+++ b/less/header.less
@@ -25,9 +25,16 @@ header {
                 text-transform: uppercase;
                 font-size: @largeFontSize;
                 font-weight: 500;
-
             }
+
+            @media @phone {
+                flex-direction: column;
+                
+            }
+
+
         }
+
 
         .logo img {
             border-radius: 30%;
@@ -38,6 +45,13 @@ header {
             height: 60px;
             box-shadow: @amber 5px 5px 7px;
         }
+
+        @media @phone {
+            flex-direction: column;
+            max-height: 42%;
+        }
+
+
 
     }
 
@@ -88,6 +102,10 @@ header {
             }
         }
 
+    }
+
+    @media @phone {
+        padding: @mediumPadding;
     }
 
 }
